[package]
name = "dandy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "0.8"
bs58 = "0.4"
dusk-pki = { version = "0.13", default-features = false }
dusk-bytes = "0.1"
rand_chacha = { version = "0.3", default-features = false }
sha2 = { version = "^0.10", default-features = false }